force-app/main/default/objects/Payment_Method__c/Payment_Method__c.object-meta.xml
<CustomObject>
    <label>Payment Method</label>
    <nameField>
        <displayFormat>PM-{0000000000}</displayFormat>
        <label>Payment Method ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Methods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>