force-app/main/default/objects/Payment_Method__c/fields/Allow_DDI_Alert__c.field-meta.xml
<CustomField>
    <fullName>Allow_DDI_Alert__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When True, Direct Debit Instruction email alerts will be sent on creation or update to direct debit details. Used to filter out alerts on renewal.</description>
    <inlineHelpText>When True, Direct Debit Instruction email alerts will be sent on creation or update to direct debit details.</inlineHelpText>
    <label>Allow DDI Alert</label>
    <type>Checkbox</type>
</CustomField>