force-app/main/default/objects/Payment_Method__c/fields/Authorization_code__c.field-meta.xml
<CustomField>
    <fullName>Authorization_code__c</fullName>
    <label>Authorization code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>