force-app/main/default/objects/Payment_Method__c/fields/CC_Token__c.field-meta.xml
<CustomField>
    <fullName>CC_Token__c</fullName>
    <label>CC Token</label>
    <length>50</length>
    <type>Text</type>
</CustomField>