force-app/main/default/objects/Payment_Method__c/fields/DaystoRenewal__c.field-meta.xml
<CustomField>
    <fullName>DaystoRenewal__c</fullName>
    <formula>Membership__r.Renewal_Date__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Renewal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>