force-app/main/default/objects/Payment_Method__c/fields/DD_Transaction_dd_mm__c.field-meta.xml
<CustomField>
    <fullName>DD_Transaction_dd_mm__c</fullName>
    <formula>MID(TEXT(Membership__r.Renewal_Date__c),9,2) &amp; &apos;/&apos; &amp; MID(TEXT(Membership__r.Renewal_Date__c),6,2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DD Transaction DD/MM</label>
    <type>Text</type>
</CustomField>