force-app/main/default/objects/Payment_Method__c/fields/Mandate_Amount__c.field-meta.xml
<CustomField>
    <fullName>Mandate_Amount__c</fullName>
    <label>Mandate Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>