force-app/main/default/objects/Payment_Method__c/fields/MandateAmountDifference__c.field-meta.xml
<CustomField>
    <fullName>MandateAmountDifference__c</fullName>
    <formula>Mandate_Amount__c - MandatePriorValue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mandate Amount Difference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>