force-app/main/default/objects/Payment_Method__c/fields/MandatePriorValue__c.field-meta.xml
<CustomField>
    <fullName>MandatePriorValue__c</fullName>
    <label>Mandate Prior Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>