force-app/main/default/objects/Payment_Method__c/fields/Member_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Member_Last_Name__c</fullName>
    <description>The last name of the lead member associated with the membership.</description>
    <formula>Membership__r.Lead_Member__r.LastName</formula>
    <inlineHelpText>The last name of the lead member associated with the membership.</inlineHelpText>
    <label>Member Last Name</label>
    <type>Text</type>
</CustomField>