force-app/main/default/objects/Payment_Method__c/fields/Member_Salutation__c.field-meta.xml
<CustomField>
    <fullName>Member_Salutation__c</fullName>
    <description>The salutation of the lead member associated with the membership.</description>
    <formula>TEXT(Membership__r.Lead_Member__r.Salutation)</formula>
    <inlineHelpText>The salutation of the lead member associated with the membership.</inlineHelpText>
    <label>Member Salutation</label>
    <type>Text</type>
</CustomField>