force-app/main/default/objects/Payment_Method__c/fields/Membership__c.field-meta.xml
<CustomField>
    <fullName>Membership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Membership</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>DD_Mandates</relationshipName>
    <type>Lookup</type>
</CustomField>