force-app/main/default/objects/Payment_Method__c/fields/Membership_Email__c.field-meta.xml
<CustomField>
    <fullName>Membership_Email__c</fullName>
    <description>The primary email address related to the membership.</description>
    <inlineHelpText>The primary email address related to the membership.</inlineHelpText>
    <label>Membership Email</label>
    <type>Email</type>
</CustomField>