force-app/main/default/objects/Payment_Method__c/fields/One_off_payment_date__c.field-meta.xml
<CustomField>
    <fullName>One_off_payment_date__c</fullName>
    <label>One-off Payment Date</label>
    <type>Date</type>
</CustomField>