force-app/main/default/objects/Payment_Method__c/fields/Re_issue_Payment__c.field-meta.xml
<CustomField>
    <fullName>Re_issue_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Re-issue Payment</label>
    <type>Checkbox</type>
</CustomField>