force-app/main/default/objects/Payment_Method__c/fields/Renewal_Payment_Pending__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Payment_Pending__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that a direct debit payment is due from a recent renewal, but that a transaction has not yet been generated.</description>
    <inlineHelpText>Indicates that a direct debit payment is due from a recent renewal, but that a transaction has not yet been generated.</inlineHelpText>
    <label>Renewal Payment Pending</label>
    <type>Checkbox</type>
</CustomField>