force-app/main/default/objects/Payment_Method__c/fields/Status2__c.field-meta.xml
<CustomField>
    <fullName>Status2__c</fullName>
    <formula>IMAGE( 
CASE( TEXT(Status__c) , 
&quot;Active&quot;, &quot;/resource/0000000000000/green_tick&quot;,
&quot;Cancelled&quot;, &quot;/resource/0000000000000/red_cross&quot;, 
&quot;Rejected&quot;, &quot;/resource/0000000000000/red_cross&quot;, 
&quot;/resource/0000000000000/trans_circle&quot;), 
&quot;Status&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>