force-app/main/default/objects/Payment_Method__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <formula>IMAGE( 
CASE(   RecordType.Name  , 
&quot;Direct Debit&quot;, &quot;/resource/0000000000000/dd&quot;, /* dd */ 
&quot;Debit/Credit Card&quot;, &quot;/resource/0000000000000/cc2&quot;, /* cc */ 
&quot;Cash/Cheque&quot;, &quot;/resource/0000000000000/cash2&quot;, /* cash */ 
&quot;/resource/0000000000000/transparent3d&quot;), /* Transparent */ 
&quot;status color&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>