force-app/main/default/objects/Payment_Method__c/recordTypes/Debit_Credit_Card.recordType-meta.xml
<RecordType>
    <fullName>Debit_Credit_Card</fullName>
    <active>true</active>
    <label>Debit/Credit Card</label>
</RecordType>