force-app/main/default/objects/Payment_Method__c/recordTypes/Direct_Debit.recordType-meta.xml
<RecordType>
    <fullName>Direct_Debit</fullName>
    <active>true</active>
    <label>Direct Debit</label>
</RecordType>