force-app/main/default/objects/Payment_Method__c/listViews/Card_Payments.listView-meta.xml
<ListView>
    <fullName>Card_Payments</fullName>
    <columns>NAME</columns>
    <columns>Membership__c</columns>
    <columns>Membership_Number__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Authorization_code__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status2__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Payment_Method__c.Debit_Credit_Card</value>
    </filters>
    <label>Card Payments</label>
</ListView>